crates/sui-move/tests/snapshots/cli_tests__new_tests__gitignore_exists.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
description: tests/tests/new_tests/gitignore_exists.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that sui-move new correctly updates existing .gitignore
mkdir example
echo "existing_ignore" > example/.gitignore
sui-move new example
cat example/.gitignore

----- results -----
success: true
exit_code: 0
----- stdout -----
existing_ignore
build/*

----- stderr -----
