crates/sui-move/tests/snapshots/cli_tests__new_tests__gitignore_has_build.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
info:
  program: bash
  args:
    - gitignore_has_build.sh
  env:
    PATH: "/bin:/usr/bin:../bin"
---
success: true
exit_code: 0
----- stdout -----
ignore1
build/*
ignore2

==== files in example/ ====
.gitignore
Move.toml
sources
tests

----- stderr -----
