crates/sui-move/tests/snapshots/cli_tests__new_tests__move_toml_exists.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
description: tests/tests/new_tests/move_toml_exists.sh
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
