crates/sui-move/tests/snapshots/cli_tests__new_tests__new_files.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
info:
  program: bash
  args:
    - new_files.sh
  env:
    PATH: "/bin:/usr/bin:../bin"
---
success: true
exit_code: 0
----- stdout -----
==== files in project ====
.gitignore
Move.toml
sources
tests
==== files in sources ====
example.move
==== files in tests =====
example_tests.move

----- stderr -----
