crates/sui-move/tests/snapshots/cli_tests__new_tests__new_then_build.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
description: tests/tests/new_tests/new_then_build.sh
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
