crates/sui-move/tests/snapshots/cli_tests__new_tests__sources_exists.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
description: tests/tests/new_tests/sources_exists.sh
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
