crates/sui-move/tests/snapshots/cli_tests__new_tests__tests_exists.sh.snap
---
source: crates/sui-move/tests/cli_tests.rs
info:
  program: bash
  args:
    - tests_exists.sh
  env:
    PATH: "/bin:/usr/bin:../bin"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
